updated notebook with markdowns

--- a/Recalibrated_Restaurant_Rating_Part1.ipynb
+++ b/Recalibrated_Restaurant_Rating_Part1.ipynb
@@ -54,13 +54,19 @@
    },
    "source": [
     "## Data Understanding\n",
+    "### Data Overview\n",
     "For this project, Google Maps review dataset was pulled from Google Maps API:\n",
     "\n",
     "- Each API data pull returns ~300 reviews (5 reviews per restaurant) for a given location (e.g., Chelsea)\n",
     "- Since the Google Maps API provides random ~300 reviews at a time, there may be duplicates in each pull\n",
     "- Since the API only provides the latest 5 reviews per restaurant, the star ratings composition is imbalanced as user has no control over the review selections\n",
     "\n",
-    "Overall, for this project, I have pulled roughly ~3K reviews along with restaurant information to minimize API usage cost and computing time."
+    "Overall, for this project, I have pulled roughly ~3K reviews along with restaurant information to minimize API usage cost and computing time.\n",
+    "\n",
+    "### Data Limitations\n",
+    "- Due to the limited computational power, the model will be trained on a relatively small dataset\n",
+    "- The dataset does not have all/full text reviews for a given restaurant (i.e., limited to 5 reviews per restaurant)\n",
+    "- The dataset exclusively examines reviews of New York City restaurants. Different geography may have quite different relationship between text review's sentiment score and star rating"
    ]
   },
   {
@@ -453,7 +459,9 @@
     "## Data Preparation\n",
     "Output from the Google Maps API provides quite clean dataset. Hence, we will be doing minimal data cleansing and pre-processing.\n",
     "\n",
-    "Sentiment analysis model does not require tokenizing, stemming, and lemmatizing as the models rely on pre-built lexicon that contains sentiment scores."
+    "Sentiment analysis model does not require tokenizing, stemming, and lemmatizing as the models rely on pre-built lexicon that contains sentiment scores.\n",
+    "\n",
+    "In addition, please note that this notebook was run on Google Colab environment as it was more suitable to run advanced NLP models from HuggingFace."
    ]
   },
   {
@@ -2309,14 +2317,22 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Observations\n",
+    "- Most of the reviews are 4-5 stars, which is in line with my research that Google reviews tend to be inflated and generally positive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "B6_jz9OZVvqU"
    },
    "source": [
     "## Analysis\n",
     "For the project, we will be using two different sentiment analysis model:\n",
-    "1. VADER (baseline model)\n",
-    "2. Roberta (model from HuggingFace, which should be more robust)\n",
+    "1. VADER (baseline sentiment analysis model)\n",
+    "2. Roberta (sentiment analysis model from HuggingFace, which should be more robust)\n",
     "\n",
     "Both models provide sentiment score for a given review."
    ]
@@ -2382,7 +2398,7 @@
     }
    ],
    "source": [
-    "# Example of review with emoji - will need special treatment\n",
+    "# Example of review with emoji \n",
     "example = cleaned_df['text'][32]\n",
     "example"
    ]
@@ -3178,6 +3194,15 @@
     "vader_table_clean = vader_table[['compound','review_rating']]\n",
     "fig, ax = plt.subplots()\n",
     "ax.scatter(vader_table_clean['review_rating'], vader_table_clean['compound']);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Observations\n",
+    "- On the aggregated level, VADER model's sentiment scores provide quite clear distinction among different star ratings\n",
+    "- Yet, on the individual level, there are a lot of noises as you can see from the scatter plot. Some 5 star reviews have very low VADER compound score and vice versa for the 1 star reviews"
    ]
   },
   {
@@ -4226,6 +4251,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Observation\n",
+    "- An example of VADER model providing incorrect sentiment score. The above review is very negative, yet it does not pick up on it at all. This shows limitation of the VADER model.\n",
+    "\n",
+    "Now, let's check if the Roberta model shows better performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "HIqYKdvcVvqW"
    },
@@ -4558,6 +4593,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Observations\n",
+    "- Here, it seeems like Roberta model performs much better than VADER model for the given example reviews"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -4862,7 +4905,8 @@
      "height": 431
     },
     "id": "RczpMD09cAQl",
-    "outputId": "55fb77eb-1edd-4dc7-ae7f-d9c1038a8435"
+    "outputId": "55fb77eb-1edd-4dc7-ae7f-d9c1038a8435",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -4880,6 +4924,16 @@
     "# Scatter Plot 2 - Roberta Negative\n",
     "fig, ax = plt.subplots()\n",
     "ax.scatter(roberta_table['review_rating'], roberta_table['roberta_neg']);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Observations\n",
+    "- Compared to the VADER model, Roberta model, on aggregated level, shows even bigger distinction among the star buckets, especially for the positive and negative score\n",
+    "- For the neutral score, VADER model had relatively even bars across all star ratings. Yet, for the Roberta model, it shows peak in 3 Star bucket, which makes intuitive sense as 3 star rating should be a relatively a neutral review\n",
+    "- When evaluating the scatter plot, Roberta scatter plot does bit better than that of VADER model in that I see more clear clustering for the 1,2,5 star rating reviews. Yet, there appears to be many instances where 5 star ratings still have low positive or high negative Roberta scores. This may mean either the user was providing very generous star rating despite negative text reviews or the model is incorrectly calculating the sentiment score. We will need to further investigate this. "
    ]
   },
   {
@@ -5488,6 +5542,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Observation\n",
+    "Roberta model does not provide a compound score like VADER model. Hence, I've created a compound score with custom weights to each score. And this is what I've noticed:\n",
+    "- I do see improvement compared to the VADER compound score's scatter plot in that I see better clustering for the non-neutral reviews (i.e., 1,2,4,5 star rating buckets)\n",
+    "- However, again, there appears to be some instances where 5 star ratings have quite low compound score and vice versa for 1 star ratings. We will need to manually check to see whether the model is correctly picking up or not"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -5988,7 +6052,7 @@
     }
    ],
    "source": [
-    "# Roberta model still not perfectly capturing relatively nuanced negative reviews\n",
+    "# Roberta model still not perfectly capturing relatively nuanced negative reviews (Roberta compound score of .68)\n",
     "roberta_table['text'].iloc[1738]"
    ]
   },
@@ -6019,7 +6083,7 @@
     }
    ],
    "source": [
-    "# Roberta model still not perfectly capturing relatively nuanced negative reviews #2\n",
+    "# Roberta model still not perfectly capturing relatively nuanced negative reviews #2 (Roberta compound score of .94)\n",
     "roberta_table['text'].iloc[2619]"
    ]
   },
@@ -6033,6 +6097,15 @@
    "source": [
     "# Converting the master dataframe into a csv file for further clustering analysis to prevent re-running the Roberta model\n",
     "#roberta_table.to_csv('gdrive/My Drive/Colab Notebooks/Recalibrated-Restaurant-Rating-based-on-Sentiment-Analysis/master_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Observation\n",
+    "- Above examples are reviews that got 1 star rating from the users. Despite the Roberta compound score above 0.5, which should be in range of 3-4 stars, all reviews appear to be very negative\n",
+    "- It seems like VADER model does not necessarily understand context of the sentences (e.g., first visit was great, but current visit was terrible and warm beer is not good)"
    ]
   }
  ],
