--- a/Recalibrated_Restaurant_Rating_Part1.ipynb
+++ b/Recalibrated_Restaurant_Rating_Part1.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "Considering the aforementioned facts, it is crucial for a business/company to maintain a positive Google rating for its business to thrive.\n",
     "\n",
-    "However, Google's star rating system can be arbitrary as reviewers all hold different criteria for providing certain number of stars. In this regard, this project aims to conduct NLP (Natural Language Processing) analysis to determine whether Google's star rating system is relatively accurate/objective based on the sentiment score of each review.\n",
+    "However, Google's star rating system can be arbitrary as reviewers all hold different criteria for providing certain number of stars. In this regard, this project aims to conduct sentiment analysis to determine whether Google's star rating system is relatively accurate/objective based on the sentiment scores of each review.\n",
     "\n",
     "*Source: Digital Air Strike*"
    ]
@@ -6105,7 +6105,14 @@
    "source": [
     "##### Observation\n",
     "- Above examples are reviews that got 1 star rating from the users. Despite the Roberta compound score above 0.5, which should be in range of 3-4 stars, all reviews appear to be very negative\n",
-    "- It seems like VADER model does not necessarily understand context of the sentences (e.g., first visit was great, but current visit was terrible and warm beer is not good)"
+    "- It seems like Roberta model does not necessarily understand context of the sentences (e.g., first visit was great, but current visit was terrible and warm beer is not good)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note: Please access next notebook (i.e., Recalibrated_Restaurant_Rating_Part 2) for the remaining analysis"
    ]
   }
  ],
