--- a/Recalibrated_Restaurant_Rating_Part2.ipynb
+++ b/Recalibrated_Restaurant_Rating_Part2.ipynb
@@ -15,7 +15,11 @@
     "\n",
     "## Analysis (continued)\n",
     "### Clustering\n",
-    "With the sentiment scores for each text review, we will then try to cluster the reviews based on the sentiment scores to assign recalibrated star rating."
+    "With the sentiment scores for each text review, we will then try to cluster the reviews based on the sentiment scores to assign recalibrated star rating.\n",
+    "\n",
+    "Two clustering methods will be used:\n",
+    "1. K-Means\n",
+    "2. Agglomerative"
    ]
   },
   {
@@ -294,7 +298,7 @@
     }
    ],
    "source": [
-    "# Cluster 4 probably means 4 star rating\n",
+    "# Note how many reviews were reclassified according to the new clusters\n",
     "df[df['km_cluster']==4]['review_rating'].value_counts().sort_index()"
    ]
   },
@@ -320,7 +324,6 @@
     }
    ],
    "source": [
-    "# Cluster 3 probably means 1 star rating\n",
     "df[df['km_cluster']==3]['review_rating'].value_counts().sort_index()"
    ]
   },
@@ -346,7 +349,6 @@
     }
    ],
    "source": [
-    "# Cluster 2 probably means 3 star rating\n",
     "df[df['km_cluster']==2]['review_rating'].value_counts().sort_index()"
    ]
   },
@@ -372,7 +374,6 @@
     }
    ],
    "source": [
-    "# Cluster 1 probably means 2 star rating\n",
     "df[df['km_cluster']==1]['review_rating'].value_counts().sort_index()"
    ]
   },
@@ -398,7 +399,6 @@
     }
    ],
    "source": [
-    "# Cluster 0 probably means 5 star rating\n",
     "df[df['km_cluster']==0]['review_rating'].value_counts().sort_index()"
    ]
   },
@@ -463,6 +463,7 @@
     }
    ],
    "source": [
+    "# List of 5 star reviews based on new cluster, which got 3 star reviews from reviewers\n",
     "df[(df['km_cluster']==0) & (df['review_rating']==3)]['text']"
    ]
   },
@@ -649,6 +650,7 @@
     }
    ],
    "source": [
+    "# Using different clustering parameters\n",
     "km2.fit(df[['roberta_pos','roberta_neg']])"
    ]
   },
@@ -682,6 +684,7 @@
     }
    ],
    "source": [
+    "# Didn't change from the original k-means result\n",
     "km2.cluster_centers_"
    ]
   },
@@ -885,6 +888,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Using different clustering method\n",
     "ac = AgglomerativeClustering(n_clusters=5)"
    ]
   },
@@ -942,6 +946,7 @@
     }
    ],
    "source": [
+    "# Cluster 1 seems to be very positive reviews\n",
     "df[df['review_rating']==5]['ac_cluster'].value_counts()"
    ]
   },
@@ -1017,6 +1022,7 @@
     }
    ],
    "source": [
+    "# Cluster 2 appear to be quite negative reviews\n",
     "df[df['review_rating']==2]['ac_cluster'].value_counts()"
    ]
   },
