polished notebook markdowns

--- a/Recalibrated_Restaurant_Rating_Part1.ipynb
+++ b/Recalibrated_Restaurant_Rating_Part1.ipynb
@@ -461,7 +461,7 @@
     "\n",
     "Sentiment analysis model does not require tokenizing, stemming, and lemmatizing as the models rely on pre-built lexicon that contains sentiment scores.\n",
     "\n",
-    "In addition, please note that this notebook was run on Google Colab environment as it was more suitable to run advanced NLP models from HuggingFace."
+    "In addition, please note that this notebook was run on Google Colab environment as it was more suitable to run advanced LLM/NLP models from HuggingFace."
    ]
   },
   {
