--- a/Recalibrated_Restaurant_Rating_Part2.ipynb
+++ b/Recalibrated_Restaurant_Rating_Part2.ipynb
@@ -1135,7 +1135,7 @@
     "### Recommendations:\n",
     "From the project, following are my recommendations to the PM:\n",
     "1. Post example reviews per different star rating buckets to create a general criteria/guideline for what each star rating means (to prevent very harsh or loose star ratings)\n",
-    "2. Beta-test ML+NLP-based restaurant star rating system (i.e., based on sentiment analysis model) in addition to the traditional star rating system and get user's feedback\n",
+    "2. Beta-test ML+NLP/LLM-based restaurant star rating system (i.e., based on sentiment analysis model) in addition to the traditional star rating system and get user's feedback\n",
     "3. Beta-test star rating assistant feature: when there appears to be a big mismatch in text review's sentiment score and user's star rating, assistant feature can provide a suggested star rating, which user can override if user would like to"
    ]
   },
