--- a/Recalibrated_Restaurant_Rating_Part1.ipynb
+++ b/Recalibrated_Restaurant_Rating_Part1.ipynb
@@ -64,7 +64,7 @@
     "Overall, for this project, I have pulled roughly ~3K reviews along with restaurant information to minimize API usage cost and computing time.\n",
     "\n",
     "### Data Limitations\n",
-    "- Due to the limited computational power, the model will be trained on a relatively small dataset\n",
+    "- Due to the limited computational power, we are working with a small dataset\n",
     "- The dataset does not have all/full text reviews for a given restaurant (i.e., limited to 5 reviews per restaurant)\n",
     "- The dataset exclusively examines reviews of New York City restaurants. Different geography may have quite different relationship between text review's sentiment score and star rating"
    ]
