--- a/Recalibrated_Restaurant_Rating_Part2.ipynb
+++ b/Recalibrated_Restaurant_Rating_Part2.ipynb
@@ -1144,7 +1144,7 @@
    "metadata": {},
    "source": [
     "## Next Steps\n",
-    "1. Re-run the analysis and re-train the model with bigger dataset\n",
+    "1. Re-run the analysis with a bigger dataset\n",
     "2. Research into more advanced sentiment analysis model that can better pick up nuances (perhaps, utilize ChatGPT 4.0 API)"
    ]
   }
